Fix contrast on comment meta text

--- a/assets/sass/modules/_comments.scss
+++ b/assets/sass/modules/_comments.scss
@@ -137,7 +137,7 @@
 		margin-top: rem(5);
 
 		a {
-			color: $color-silver-chalice;
+			color: $color-tundora;
 			text-decoration: none;
 		} // a
 
