--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -23,6 +23,7 @@ $color-white: #fff;
 $color-gray: #808080;
 $color-cod-gray: #111;
 $color-mineshaft: #333;
+$color-tundora: #454545;
 $color-dove-gray: #666;
 $color-gray-alt: #929292;
 $color-silver-chalice: #aaa;
